added string resource box_two to box_two text added TextView to the right of box_two_text set TextView id = box_text_three added string resource box_three to box_text_three added TextView to the right of box_two_text set TextView id = box_text_four added string resource box_four to box_text_four added TextViews to the right of box_two_text set TextView id = box_text_five added string resource box_five to box_text_five set box_text_three style to WhiteBox set box_text_four style to WhiteBox set box_text_five style to WhiteBox

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,35 @@
         android:layout_height="130dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="@string/box_two"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/box_one_text" />
+
+    <TextView
+        android:id="@+id/box_text_three"
+        style="@style/WhiteBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/box_three"
+        tools:layout_editor_absoluteX="167dp"
+        tools:layout_editor_absoluteY="67dp" />
+
+    <TextView
+        android:id="@+id/box_text_four"
+        style="@style/WhiteBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/box_four"
+        tools:layout_editor_absoluteX="167dp"
+        tools:layout_editor_absoluteY="102dp" />
+
+    <TextView
+        android:id="@+id/box_text_five"
+        style="@style/WhiteBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/box_five"
+        tools:layout_editor_absoluteX="168dp"
+        tools:layout_editor_absoluteY="136dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
