--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,10 @@
     <TextView
         android:id="@+id/box_text_three"
         style="@style/WhiteBox"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/box_three"
         app:layout_constraintBottom_toTopOf="@+id/box_text_four"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,8 +46,12 @@
     <TextView
         android:id="@+id/box_text_four"
         style="@style/WhiteBox"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/box_four"
         app:layout_constraintBottom_toTopOf="@+id/box_text_five"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +61,10 @@
     <TextView
         android:id="@+id/box_text_five"
         style="@style/WhiteBox"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/box_five"
         app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
         app:layout_constraintEnd_toEndOf="parent"
