--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,19 +77,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
-        android:text="TextView"
+        android:text="@string/how_to_play"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="269dp"
-        tools:text="@string/how_to_play" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/info_text"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/info_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/tap_the_boxes_and_buttons"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/label_text"
-        tools:layout_editor_absoluteY="417dp" />
+        app:layout_constraintTop_toBottomOf="@+id/box_two_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
